<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Colors</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="yellow">Yellow</string>
    <string name="display">OK</string>
</resources>
