<!--?xml version="1.0" encoding="utf-8"?-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/radioGroup"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="vertical" >
 
<RadioButton
android:id="@+id/rb1"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/red"
  android:checked="true"/>
 
<RadioButton
android:id="@+id/rb2"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/blue" />
 
<RadioButton
android:id="@+id/rb3"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/green" />
<RadioButton
android:id="@+id/rb4"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/brown" />
<RadioButton
android:id="@+id/rb5"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/yellow" />
</RadioGroup>
    <Button
        android:id="@+id/Display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display" />
 
</LinearLayout>